<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_title_backspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_simple">

            <EditText
                android:id="@+id/first_name_edit_text"
                style="@style/StandartEditTextStyle"
                android:layout_marginTop="@dimen/margin_between_views"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:text=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.050000012" />

            <EditText
                android:id="@+id/last_name_edit_text"
                style="@style/StandartEditTextStyle"
                android:layout_marginTop="@dimen/margin_between_views"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name_edit_text" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_views"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_edit_text">

                <EditText
                    android:id="@+id/gender_edit_text"
                    style="@style/StandartEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_gender"
                    android:inputType="textPersonName"
                    android:maxEms="1"
                    android:text=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/first_name_edit_text" />

                <EditText
                    android:id="@+id/height_edit_text"
                    style="@style/StandartEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/margin_between_views"
                    android:layout_marginEnd="@dimen/margin_between_views"
                    android:layout_weight="1"
                    android:hint="@string/hint_height"
                    android:inputType="numberDecimal"
                    android:text=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/first_name_edit_text" />

                <EditText
                    android:id="@+id/weight_edit_text"
                    style="@style/StandartEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_weight"
                    android:inputType="numberDecimal"
                    android:text=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/first_name_edit_text" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_edit_text"
                style="@style/PasswordStandartEditTextStyle"
                android:layout_marginTop="@dimen/margin_between_views_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <EditText
                    style="@style/StandartEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_between_views_2"
                    android:hint="@string/hint_concoct_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repass_edit_text"
                style="@style/PasswordStandartEditTextStyle"
                android:layout_marginTop="@dimen/margin_between_views_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass_edit_text">

                <EditText
                    style="@style/StandartEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_between_views_2"
                    android:hint="@string/hint_repeate_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/change_pass"
                style="@style/OrangeBtnStyle"
                android:text="@string/label_change"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>