<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_simple">

            <TextView
                android:id="@+id/name_text"
                style="@style/BlackTextStyle_Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/text_big"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/number_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_items"
                android:paddingTop="@dimen/margin_between_views"
                android:paddingBottom="@dimen/margin_between_views"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_text">

                <TextView
                    android:id="@+id/number_layout_title"
                    style="@style/Normal_2_BlackTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/label_number_phone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/number_layout_text"
                    style="@style/SmallerGreyTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:textSize="@dimen/text_normal_2"
                    app:layout_constraintBottom_toBottomOf="@+id/number_layout_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/number_layout_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gender_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_items"
                android:paddingTop="@dimen/margin_between_views"
                android:paddingBottom="@dimen/margin_between_views"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_layout">

                <TextView
                    android:id="@+id/gender_title"
                    style="@style/Normal_2_BlackTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/hint_gender"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/gender_text"
                    style="@style/SmallerGreyTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:textSize="@dimen/text_normal_2"
                    app:layout_constraintBottom_toBottomOf="@+id/gender_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/gender_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/height_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_items"
                android:paddingTop="@dimen/margin_between_views"
                android:paddingBottom="@dimen/margin_between_views"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender_layout">

                <TextView
                    android:id="@+id/height_title"
                    style="@style/Normal_2_BlackTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/hint_height"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/height_text"
                    style="@style/SmallerGreyTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:textSize="@dimen/text_normal_2"
                    app:layout_constraintBottom_toBottomOf="@+id/height_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/height_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/width_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_items"
                android:paddingTop="@dimen/margin_between_views"
                android:paddingBottom="@dimen/margin_between_views"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/height_layout">

                <TextView
                    android:id="@+id/width_title"
                    style="@style/Normal_2_BlackTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/hint_weight"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/width_text"
                    style="@style/SmallerGreyTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:textSize="@dimen/text_normal_2"
                    app:layout_constraintBottom_toBottomOf="@+id/width_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/width_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>